src/test/ui/explicit/explicit-call-to-supertrait-dtor.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/explicit-call-to-supertrait-dtor.rs:19:14
   |
LL |         self.drop();
   |         -----^^^^--
   |         |    |
   |         |    explicit destructor calls not allowed
   |         help: consider using `drop` function: `drop(self)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
